<resources>
    <string name="app_name">MMI Todo App</string>
    <string name="action_settings">Settings</string>
    <string name="hint_title">Your title</string>
    <string name="label_title">Title</string>
    <string name="hint_text">Some text</string>
    <string name="label_text">Description</string>
    <string name="hint_done">Done</string>
    <string name="label_done">Done</string>
    <string name="section_done">Done</string>
    <string name="section_customized">Customized</string>
    <string name="due_date">Due date</string>
    <string name="formated_due_date">Due date: %1$s %2$s</string>
    <string name="section_due">Due</string>
    <string name="hint_due_date">Date</string>
    <string name="label_due_date">Date</string>
    <string name="hint_due_time">Time</string>
    <string name="label_due_time">Time</string>
    <string name="label_favorite">Favorite</string>
    <string name="section_more">More</string>
    <string name="label_no_data">No Data</string>
    <string name="label_email">Email</string>
    <string name="hint_email">Please enter your email</string>
    <string name="validation_invalid_password">not valid</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="action_login">Login</string>
    <string name="action_order_by_favourite">Sort by favourite</string>
    <string name="action_order_by_due_date">Sort by due date</string>
    <string name="activity_login">Login</string>
    <string name="icon">icon</string>
    <string name="label_connection_settings">Connection Settings</string>
    <string name="label_protocol">Protocol</string>
    <string name="hint_protocol">Protocol</string>
    <string name="hint_host">localhost</string>
    <string name="hint_port">80</string>
    <string name="label_port">Port</string>
    <string name="label_host">Host</string>
    <string name="label_save">Save</string>
    <string name="label_test_connection">Test Connection</string>
    <string name="txt_reachable">Connection successful</string>
    <string name="txt_not_reachable">Not connected</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="title_details">Details</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_location">Location</string>
    <string name="activity_contacts">Contacts</string>
    <string name="label_no_contacts">No contacts</string>
    <string name="button_remove">Remove</string>
    <string name="action_remove">Remove</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove_selected">Remove selected</string>
    <string name="action_select">Select</string>
    <string name="title_email">Email</string>
    <string name="title_call_phone">Call phone</string>
    <string name="button_cancel">Cancel</string>
    <string name="text_send_email">Send emai</string>
    <string name="error_no_email_clients">\"There are no email clients installed.\"</string>
    <string name="title_send_sms">Send SMS</string>
    <string name="title_send_email">Send Email</string>
    <string name="action_locate">Locate</string>
    <string name="action_search">Search</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid Lat/Lng</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="no_location_data_provided">No location extra provided</string>
    <string name="template_address">%1$s, %2$s</string>
    <string name="button_save">Save</string>
    <string name="label_please_select_a_location">Please select a location</string>
    <string name="text_unknown_location">Unknown Location</string>
    <string name="button_edit">Edit</string>
    <string name="text_edit_address">Edit Address</string>
    <string name="text_enter_your_own_address">Enter you own address</string>
    <string name="auth_success">Login successfull</string>
    <string name="delete_todo">Delete Todo?</string>
    <string name="delete_todo_confirm_question">Do you really want to delete this Todo?</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="tab_title_list">List</string>
    <string name="tab_title_map">Map</string>
    <string name="toast_connection_setting_is_unvalid">Settings are not valid</string>
    <string name="label_skip">Skip this step</string>
    <string name="dialog_please_wait">Please wait...</string>
    <string name="dialog_login">Login</string>
    <string name="dialog_connection">Connection Abort</string>
    <string name="dialog_proceed_without_server_sync">There is no active connection to the host. You are able to proceed, but no you will work local only.</string>
    <string name="dialog_change_connection_settings">Change connection settings</string>
    <string name="action_logout">Logout</string>
    <string name="section_settings">Settings</string>
    <string name="login_not_successful">Email or Password uncorrect</string>
    <string name="dialog_would_you_like_to_save_this">Would you like to save this location?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="label_delete">Delete</string>
    <string name="dialog_would_you_like_to_remove_this">Would you like to remove this?</string>
    <string name="label_no_to_dos">No todos yet</string>
</resources>
